...
                Spacer()
            }.padding(.leading)
                .padding(.top, -20)
            
            // Tab picker for Logs and Friends
            Picker("Options", selection: $vm.selectedTab) {
                Text("Logs").tag("Logs")
                Text("Friends").tag("Friends")
            }
            .pickerStyle(SegmentedPickerStyle())
            .accessibility(identifier: "logsFriendsTabPicker")

            
            // Logs Tab View
...
                        }
                        .padding(.horizontal)
                        .padding(.top, 10)
                    } else {
                        Text("No public logs found.")
                            .foregroundColor(.gray)
                            .accessibilityIdentifier("NoLogsText")
                    }
                }
            } else if vm.selectedTab == "Friends" {
                // Friends Tab View
                HStack {
                    
...
                    Button(action: {
                        vm.showingSendFriendReqSheet = true
                    }) {
                        Image(systemName: "person.badge.plus")
                            .foregroundColor(.white)
                    }
                    .accessibilityIdentifier("addFriendButton")
                    .frame(width: 100, height: 40)
                    .background(Color.blue)
                    .cornerRadius(10)
                    .padding(.bottom, 15)
                }.padding()
                
...
                                    .frame(width: 285, height: 1)
                                    .foregroundColor(.gray)
                            }
                            .padding(.bottom, 10)
                            ForEach(vm.friends) { friendId in FriendListElement(friendId: friendId.userId ?? "", userId: vm.getUserId(), username: friendId.username ?? "", avatarPreset: friendId.avatarPreset ?? 1, user: vm.userData)
                                    .padding(.horizontal)
                                    .accessibilityIdentifier("FriendProfileElement")
                            }
                            .padding(.leading, 10)
                        } else {
                            Text("No friends found.")
                                .foregroundColor(.gray)
                                .accessibility(identifier: "NoFriendsText")
                        }
                        
                        if vm.showingNotification {
                            notificationView
                                .transition(.move(edge: .bottom))
                                .onAppear {
...
