...

                        VStack (spacing: 15) {
                            TextField("Email", text: $username)
                                .textFieldStyle(RoundedBorderTextFieldStyle())
                                .padding(.horizontal)
                                .autocapitalization(.none)
                                .accessibility(identifier: "usernameTextField")
                                .keyboardType(UIKeyboardType.emailAddress)
                            
                            
                            SecureField("Password", text: $password)
                                .textFieldStyle(RoundedBorderTextFieldStyle())
                                .padding(.horizontal)
                                .accessibility(identifier: "passwordSecureField")
                        }

                        Button("Log In") {
                            if username.isEmpty || password.isEmpty {
                                vm.loginMessage = "Please fill all fields"
                                vm.messageColor = Color.red
...
                        .frame(maxWidth: .infinity)
                        .padding()
                        .background(Color.blue)
                        .foregroundColor(.white)
                        .cornerRadius(10)
                        .padding()
                        .accessibility(identifier: "loginButton")
                        NavigationLink(destination: SignupView(vm: vm)) {
                           HStack {
                               Text("Don't have an account?")
                                   .foregroundColor(.gray)
                               Text("Signup")
                                   .foregroundColor(.blue)
...
